<resources>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="app_name1">CommWebView</string>
    <string name="comm_hdl_web_url_default">file:///android_asset/comm_hdl_web_error_us.html</string>
    <string name="comm_hdl_web_url_default2">file:///android_asset/net_error_us.html</string>
    <string name="JianXiao_title">机动车排气检测外观查验系统-报废监销</string>
    <string name="access_network_failure">访问网络失败...</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">机动车外检系统</string>
    <string name="app_name_singleline">机动车外检系统</string>
    <string name="app_names">布局实例</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="bsqxs">变速器型式</string>
    <string name="buhege">不合格</string>
    <string name="cancel_button">取 消</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chaxun_carmsg_title">机动车排气检测外观查验系统-查询-车辆信息</string>
    <string name="chaxun_title">机动车排气检测外观查验系统-查询</string>
    <string name="chayan_carmsg_title">机动车排气检测外观查验系统-查验-车辆信息</string>
    <string name="chayan_editcar_title">机动车排气检测外观查验系统-查验-手动输入</string>
    <string name="chayan_list_title">机动车排气检测外观查验系统-查验-外检项目</string>
    <string name="chayan_newcar_title">机动车排气检测外观查验系统-查验-新车查验</string>
    <string name="chayan_picTextView">拍摄 前45度照片，准备好后请按“开始拍照”按钮</string>
    <string name="chayan_title">机动车排气检测外观查验系统-查验</string>
    <string name="chayan_top_menu">请选择“不合格项”：</string>
    <string name="check_result">检测结果</string>
    <string name="check_time">检测日期</string>
    <string name="clgzsw">车辆工作水温</string>
    <string name="cllx">车辆类型</string>
    <string name="clsbm">车辆识别码</string>
    <string name="conn_error">2</string>
    <string name="conn_false">0</string>
    <string name="conn_success">1</string>
    <string name="cphm">车牌号码</string>
    <string name="cphm_hint">车牌号</string>
    <string name="cpys">车牌颜色</string>
    <string name="csys">车身颜色</string>
    <string name="cx">车辆信息查询</string>
    <string name="cyjg">查验结果</string>
    <string name="cyjl">查验结论</string>
    <string name="cyjlNote">如果查验结果为不合格，\n请在此处输入查验结论</string>
    <string name="cyphoto">查验拍照</string>
    <string name="cyxm">查验项目</string>
    <string name="czlxfs">联系方式</string>
    <string name="defaultPort">80</string>
    <string name="default_areaView">默认车牌前缀</string>
    <string name="dws">挡位数</string>
    <string name="effluent_standard">排放标准</string>
    <string name="fdjh">发动机号：</string>
    <string name="fdjxh">发动机型号：</string>
    <string name="fgdhxjpyz">分缸点火线\n及喷油嘴</string>
    <string name="finish_button">完 成</string>
    <string name="foot_name">深圳市安车检测股份有限公司</string>
    <string name="fqzxh">废气再循环</string>
    <string name="gbcswdxt">关闭\n车身稳定系统</string>
    <string name="gbkt">关闭空调</string>
    <string name="getCheckList_false">获取查验列表失败！请确认该车型或业务的查验项已保存在PDA服务器数据库中!</string>
    <string name="goback">返回车辆查询</string>
    <string name="gomain">返回主菜单</string>
    <string name="gyfs">供油方式</string>
    <string name="hege">合格</string>
    <string name="hello">Hello World, LoginActivity!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="hphm">号牌号码</string>
    <string name="hpzl">号牌种类</string>
    <string name="init_button">同 步</string>
    <string name="jczbhView">检测站编号</string>
    <string name="jdczt">机动车信息：</string>
    <string name="jpq">进排气</string>
    <string name="jqfs">进气方式</string>
    <string name="jwjhq">机外净化器</string>
    <string name="kqlx">空气滤芯</string>
    <string name="label_common">通用项目</string>
    <string name="label_huoche">货车挂车</string>
    <string name="label_keche">大中型客车</string>
    <string name="label_xiaoche">校车</string>
    <string name="ljxslc">行驶里程</string>
    <string name="login_button">登 录</string>
    <string name="login_title">机动车排气检测外观查验系统-登录</string>
    <string name="lt">轮胎</string>
    <string name="ltgg">轮胎规格：</string>
    <string name="main_title">机动车排气检测外观查验系统-主目录</string>
    <string name="mhy">是否冒黑烟</string>
    <string name="mk_button">确 定</string>
    <string name="msg_check_null">用户名或密码不能为空</string>
    <string name="msg_connect_false">连接失败，请检查服务器IP、端口设置是否正确</string>
    <string name="msg_content_false">保存失败，请重试</string>
    <string name="msg_content_null">内容不能为空值</string>
    <string name="msg_getCheckNo_false">获取查验编号失败，请重试</string>
    <string name="msg_netConn_faile">网络连接失败，请检查wifi开关和IP设置，并确定Tomcat已启动</string>
    <string name="msg_netConn_success">wifi连接已打开</string>
    <string name="msg_save_false">车辆外检数据本地化失败，请重试</string>
    <string name="msg_save_success">保存成功</string>
    <string name="msg_servConn_faile">网络连接失败，请检查wifi和tomcat是否开启</string>
    <string name="msg_validate_faile">用户名或密码错误</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="newCar_button">点击进入新车查验</string>
    <string name="newcar_hint">新车请输入VIN码</string>
    <string name="no">否</string>
    <string name="normal">正常</string>
    <string name="number_plate">号牌号码</string>
    <string name="owner_name">车主名称</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="pda_noView">PDA编号</string>
    <string name="pic_root">/AC_CHECKSYS_PIC/</string>
    <string name="pl">排量</string>
    <string name="pqjhzz">排气净化装置</string>
    <string name="pqjhzzzt">排气\n净化装置状态</string>
    <string name="pwd_title">机动车排气检测外观查验系统-修改密码</string>
    <string name="qdfs">驱动方式</string>
    <string name="qgs">汽缸数</string>
    <string name="quit_button">退 出</string>
    <string name="re_mk_button">复检</string>
    <string name="registerTextView">系统注册</string>
    <string name="register_button">注 册</string>
    <string name="register_import_error">输入信息有误...</string>
    <string name="register_msg_null">请将内容填写完整！</string>
    <string name="register_pda_null">无法获取PDA标识，不能注册！</string>
    <string name="report_number">报告单编号</string>
    <string name="rup_title">机动车排气检测外观查验系统-照片重传</string>
    <string name="ryxs">燃油形式</string>
    <string name="save_button">保 存</string>
    <string name="sbmView">识别码</string>
    <string name="seats">核定载人数</string>
    <string name="serv_ipView">站点服务器IP：</string>
    <string name="serv_portView">站点服务器端口：</string>
    <string name="settingTextView">系统设置</string>
    <string name="setting_button">设 置</string>
    <string name="setting_register">系统注册</string>
    <string name="setting_title">机动车排气检测外观查验系统-设置</string>
    <string name="sjy">是否烧机油</string>
    <string name="socketTimeoutException">连接服务器超时，请检查网络</string>
    <string name="spinner_default">-请选择-</string>
    <string name="spinner_title">请选择：</string>
    <string name="startCK_button">开 始</string>
    <string name="start_button">开始拍照</string>
    <string name="start_button1">拍 照</string>
    <string name="start_button2">Socket连接测试</string>
    <string name="station_API_serial_number">站点接口序列号</string>
    <string name="station_number">检测站编号</string>
    <string name="str_deviceidView">PDA标识：</string>
    <string name="str_pwdView">密码</string>
    <string name="str_userView">用户名</string>
    <string name="syxz">使用性质</string>
    <string name="testnumner">检测报告编号</string>
    <string name="title_activity_register">机动车排气检测外观查验系统-注册</string>
    <string name="tongxun_title">机动车排气检测外观查验系统-通讯</string>
    <string name="tsno">检测站</string>
    <string name="unknownHostException">未知服务器，请检查配置</string>
    <string name="unnormal">不正常</string>
    <string name="uploadpic_service_connected">上传照片服务连接成功</string>
    <string name="uploadpic_service_disconnected">上传照片服务连接失败</string>
    <string name="vin">VIN码</string>
    <string name="vin_title">机动车排气检测外观查验系统-查验VIN</string>
    <string name="webServ_ipView">中心web服务IP</string>
    <string name="webServ_portView">中心web服务端口</string>
    <string name="web_service_IP">中心web服务ip</string>
    <string name="web_service_port">中心web服务端口</string>
    <string name="wgcyxm">外观查验项目：</string>
    <string name="wkcc">外廓尺寸：</string>
    <string name="xccy">新车查验</string>
    <string name="xm19">项目19是否检测</string>
    <string name="yes">是</string>
    <string name="ygc">是否油罐车</string>
    <string name="yqhszz">油气回收装置</string>
    <string name="ywlx">业务类型</string>
    <string name="zcz">驻车轴</string>
    <string name="zhoushu">轴数</string>
    <string name="zhuansu">额定转速</string>
    <string name="zyccy">在用车查验</string>
</resources>
