<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:orientation="vertical">

    <include
        android:id="@+id/include"
        layout="@layout/title_menu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
        android:layout_marginTop="40dp"
        android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/setting_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
            android:text="@string/settingTextView"
            android:textColor="@color/clr_sysTitle"
            android:textSize="@dimen/sysTitle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:background="@drawable/background_login_div_bg"
        android:orientation="vertical"
        android:padding="15dp"
        android:paddingTop="45dp"
        android:stretchColumns="1">

        <TextView
            android:id="@+id/TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/webServ_ipView"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize" />

        <EditText
            android:id="@+id/pdaServIPEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone"
            android:maxLength="20"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/black"
            android:textSize="@dimen/textSize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/webServ_portView"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize" />

        <EditText
            android:id="@+id/pdaServPortEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:inputType="number|numberSigned|numberDecimal|numberPassword|phone"
            android:maxLength="5"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/black"
            android:textSize="@dimen/textSize" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:stretchColumns="*">

            <TableRow>

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
                    android:background="@drawable/button_shape"
                    android:text="@string/cancel_button"
                    android:textColor="@color/black"
                    android:textSize="@dimen/buttonSize" />

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
                    android:background="@drawable/button_shape"
                    android:text="@string/save_button"
                    android:textColor="@color/black"
                    android:textSize="@dimen/buttonSize" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>
